14013
{code}
scala> [paulp@jon trunk (lazyrepl)]$$ scala27
Welcome to Scala version 2.7.3.final (Java HotSpot(TM) Client VM, Java 1.5.0_16).
Type in expressions to have them evaluated.
Type :help for more information.

scala> val & = "abc"
&: java.lang.String = abc

scala> &
     | ;
<console>:2: error: illegal start of simple expression
       ;
       ^

scala> val x = &
     | ;
<console>:2: error: illegal start of simple expression
       ;
       ^

scala> $$amp
res0: java.lang.String = abc
{code}

(Assigning to myself, ticket for my reference.)
